# Senku

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
SenkNoBunshin/: compile_commands.json  platformio.ini
SenkNoBunshin/src/: config.h  display.cpp  display.h  gif_player.cpp  gif_player.h  main.cpp  network.cpp  network.h  touch.cpp  touch.h
SenkuNoChinou/MCP/prompts/: go_prompt.py  ichi_prompt.py  ni_prompt.py  san_prompt.py  yon_prompt.py
SenkuNoChinou/MCP/servers/: environment_server.py  go_server.py  ichi_server.py  jina_server.py  music_server.py  ni_server.py  ntfy_server.py  san_server.py  tavily_server.py  wikipedia_server.py
SenkuNoChinou/MCP/tools/: calendar_tool.py  datetime_tool.py  jina_tool.py  journal_tool.py  music_tool.py  ntfy_tool.py  tavily_tool.py  todo_tool.py  weather_tool.py  wiki_tool.py
SenkuNoChinou/agents/: gear_base.py  gear_go.py  gear_ichi.py  gear_ni.py  gear_router.py  gear_san.py  gear_yon.py  gear_zero.py
SenkuNoChinou/controllers/: api.py  gif_router.py
SenkuNoChinou/core/: scheduler.py  server.py  workflow.py
SenkuNoChinou/models/: agentState.py  apiSchema.py  dataSchema.py  mcpSchema.py
SenkuNoChinou/repositories/: calendar_repo.py  database.py  journal_repo.py  todo_repo.py
SenkuNoChinou/services/: cli_app.py  gif_service.py  stt.py
