[project]
name = "senku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.2",
    "langfuse>=2.0.0",
    "wikipedia>=1.4.0",
    "fastmcp>=3.3.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "litellm>=1.86.2",
    "pydantic>=2.13.4",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "python-telegram-bot>=22.7",
    "ytmusicapi>=1.12.0",
    "yt-dlp>=2026.3.17",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-groq>=1.1.2",
    "redis>=8.0.0",
    "uvicorn[standard]>=0.48.0",
"pillow>=11.0.0",
    "certifi>=2026.5.20",
    "pymongo>=4.9.0",
    "beanie>=2.1.0",
]
